# scrape-to-ical

./: README.md  pyproject.toml
.github/workflows/: main.yml
calendars/: BPL.ics  BRIC.ics  Barzakh_Cafe.ics  Brooklyn_Botanic_Garden.ics  Brooklyn_Football_Club.ics  Jazz_Generation.ics  Red_Calendar.ics  The Owl Music ParlorThe Owl Music Parlor.ics  The_Owl_Music_Parlor.ics
src/: abstract_scraper.py  main.py  my_calendar.py  owl.py
src/scrapers/: barzakh.py  bbg.py  bfc.py  bpl.py  bric.py  jazz_generation.py  owl.py  red.py
