[project]
name = "scrape-to-ical"
version = "0.1.0"
description = ""
authors = [
    {name = "andy",email = "andy@andyhub.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icalendar (>=6.3.1,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "feedparser (>=6.0.11,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
